# harspylib

./: .gitignore  LICENSE  README.md  amort_allocator.py  amort_cli.py  amort_gardio.py  amort_streamlit.py  build.md  cards.csv  pyproject.toml  requirements.txt
amort/: Readme.md  amort_streamlit.py
harspylib/: __init__.py
harspylib/amort/: __init__.py  amort_cli.py  amort_gradio.py  amort_streamlit.py  cards.csv  requirements.txt
harspylib/htmlscraper/: Readme.md  __init__.py
harspylib/xlinkscraper/: __init__.py  requirements.txt  xlinkscraper.py
htmlscraper/: htmlscraper.py
linkscraper/: Readme.md  Template.html  html_link_scraper.py
xlinkscraper/: Readme.md
